# codex-local-doc-runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/docrt-core/: Cargo.toml
crates/docrt-core/src/: lib.rs
docs/: architecture.md  batch-and-cache-design.md  codex-integration.md  mainline-requirements.md  patch-protocol.md  pdf-annotation.md  quickstart.md  release-notes-0.2.0-preview.1.md  release-notes-0.2.0-preview.2.md  release-notes-1.1.0.md  storage-management.md  task-manifest.md  troubleshooting.md  v1-support-boundaries.md
docs/adr/: 0001-use-uv-for-python-runtime.md  0002-use-office-com-for-pdf-export.md  0003-use-json-cli-contract.md  0004-defer-rust-core-until-protocol-stabilizes.md  0005-use-rust-core-for-agent-runtime.md  0006-add-agent-integration-contract.md
examples/: AGENTS.template.md  README.md  run-smoke.md
examples/annotations/: pdf-valid.json
examples/fixtures/: sample.docx  sample.xlsx
examples/patches/: docx-replace.json  xlsx-replace.json
examples/tasks/: xlsx-patch-verify.json
schemas/: patch-docx.schema.json  patch-xlsx.schema.json  result.schema.json  task-manifest.schema.json
scripts/: bootstrap-uv.ps1
src/docrt/: __init__.py  agent.py  api.py  cache_ops.py  cli.py  cli_batch.py  cli_config.py  cli_document.py  cli_maintenance.py  cli_runtime.py  cli_support.py  cli_task.py  config.py  config_cli.py  core_bridge.py  doctor.py  docx_ops.py  docx_patch.py  docx_styles.py  errors.py  job_worker.py  jobs.py  jsonutil.py  log_analysis.py  logging.py  maintenance.py  models.py  office_com.py  office_convert.py  office_process.py  office_worker.py  patch_common.py  patch_ops.py  paths.py  pdf_annotate.py  (+19 more)
tests/: conftest.py  test_bootstrap_script.py  test_cli.py  test_config_paths.py  test_core_bridge.py  test_doctor.py  test_document_ops.py  test_docx_format_preservation.py  test_jobs.py  test_logging_analysis.py  test_maintenance.py  test_models.py  test_office_convert.py  test_pdf_pages.py  test_read_patch_verify_task.py  test_runtime_env.py  test_runtime_features.py
