[project]
name = "codex-local-doc-runtime"
version = "1.1.0"
description = "Windows uv + local Office DOCX/PDF/XLSX runtime toolchain for Agent workflows"
readme = "README.md"
authors = [
    { name = "Aetherialter", email = "Aetherialter@outlook.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["codex", "docx", "pdf", "xlsx", "office", "windows", "uv", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "jsonschema>=4.26.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "pymupdf>=1.26.0",
    "python-docx>=1.1.2",
    "pywin32>=310; platform_system == 'Windows'",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
docrt = "docrt.cli:app"

[project.urls]
Homepage = "https://github.com/Aetherialter/codex-local-doc-runtime"
Repository = "https://github.com/Aetherialter/codex-local-doc-runtime"
Issues = "https://github.com/Aetherialter/codex-local-doc-runtime/issues"

[dependency-groups]
dev = [
    "maturin>=1.13.3",
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "docrt"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
