[package]
name = "docrt-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust core helpers for codex-local-doc-runtime"

[lib]
name = "docrt_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module"] }
serde_json = "1.0"
sha2 = "0.10"
